[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "chainlink price feed pallet"
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "pallet-chainlink-feed"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.1", features = ['derive'], default-features = false}
serde = {version = "1.0", optional = true}
sp-arithmetic = {git = 'https://github.com/paritytech/substrate.git', rev = "645299e8b", version = '3.0.0', default-features = false}
sp-core = {git = 'https://github.com/paritytech/substrate.git', rev = "645299e8b", version = '3.0.0', default-features = false}
sp-std = {git = 'https://github.com/paritytech/substrate.git', rev = "645299e8b", version = '3.0.0', default-features = false}
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', rev = "645299e8b", version = '3.0.0', default-features = false}
# Needed for type-safe access to storage DB.
frame-support = {git = 'https://github.com/paritytech/substrate.git', rev = "645299e8b", version = '3.0.0', default-features = false}
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-benchmarking = {version = "3.1.0", default-features = false, optional = true}
frame-system = {git = 'https://github.com/paritytech/substrate.git', rev = "645299e8b", version = '3.0.0', default-features = false}

[dev-dependencies]
pallet-balances = {git = 'https://github.com/paritytech/substrate.git', rev = "645299e8b", version = '3.0.0'}
sp-io = {git = 'https://github.com/paritytech/substrate.git', rev = "645299e8b", version = '3.0.0'}
sp-std = {git = 'https://github.com/paritytech/substrate.git', rev = "645299e8b", version = '3.0.0'}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "sp-runtime/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "serde",
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
]
