[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[dependencies]
codec = { default-features = false, features = ['derive'], package = "parity-scale-codec", version = "2.0.1" }
hex-literal = { optional = true, version = "0.3.1" }
serde = { version = "1.0.125", optional = true, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = "3.1.0" }
frame-executive = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
frame-support = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
frame-system = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
frame-system-benchmarking = { default-features = false, optional = true, version = "3.0.0" }
frame-system-rpc-runtime-api = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
pallet-aura = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
pallet-balances = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
pallet-grandpa = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
pallet-randomness-collective-flip = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
pallet-sudo = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
pallet-transaction-payment = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
pallet-transaction-payment-rpc-runtime-api = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-api = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-block-builder = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-consensus-aura = { default-features = false, version = "0.9.0" }
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-inherents = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-offchain = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-session = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-std = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}
sp-version = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0'}

# local dependencies
pallet-template = { default-features = false, path = '../pallets/template'}

pallet-chainlink-feed = { path = '../../pallet-chainlink-feed', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'pallet-chainlink-feed/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-chainlink-feed/std'
]
