[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.119", optional = true }
pallet-chainlink-feed = { path = '../../../pallet-chainlink-feed', default-features = false }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = {  git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0' }
frame-support = {  git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }

[dev-dependencies]
sp-core = {  git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0' }
sp-io = {  git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0' }
sp-runtime = {  git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', version = '3.0.0' }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-chainlink-feed/std'
]
runtime-benchmarks = ['frame-benchmarking']
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
